deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: recieve-service
  namespace: webapps
spec:
  replicas: 2
  selector:
    matchLabels:
      app: recieve-service
  template:
    metadata:
      labels:
        app: recieve-service
    spec:
      containers:
      - name: recieve-service
        image: lachisenarath576259/recieve-app
        ports:
        - containerPort: 3002
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: call-service
  namespace: webapps
spec:
  replicas: 2
  selector:
    matchLabels:
      app: call-service
  template:
    metadata:
      labels:
        app: call-service
    spec:
      containers:
      - name: call-service
        image: lachisenarath576259/chat-app
        ports:
        - containerPort: 3001
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
  namespace: webapps
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api-gateway
  template:
    metadata:
      labels:
        app: api-gateway
    spec:
      containers:
      - name: api-gateway
        image: lachisenarath576259/gateway
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: recieve-service
  namespace: webapps
spec:
selector:
    app: api-gateway
  ports:
    - port: 80
      targetPort: 3002
  selector:
    app: recieve-service
---
apiVersion: v1
kind: Service
metadata:
  name: call-service
  namespace: webapps
spec:
selector:
    app: api-gateway
  ports:
    - port: 80
      targetPort: 3001
  selector:
    app: call-service
---
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
  namespace: webapps
spec:
selector:
    app: api-gateway
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 3000
  selector:
    app: api-gateway
